<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>string_calculator</artifactId>
    <groupId>pl.tzch96.string_calculator</groupId>
    <version>0.4.0</version>
  </parent>

  <groupId>pl.tzch96.string_calculator</groupId>
  <artifactId>implementation</artifactId>
  <version>0.4.0</version>

  <name>implementation</name>
  <url>https://github.com/tzch96/pk-to</url>

  <dependencies>
    <dependency>
      <groupId>pl.tzch96.string_calculator</groupId>
      <artifactId>common</artifactId>
      <version>0.3.0</version>
    </dependency>
  </dependencies>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
</project>
